--- a/src/main/resources/templates/accounts/new.html
+++ b/src/main/resources/templates/accounts/new.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout">
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
+    <link rel="stylesheet"
+          th:href="@{/css/bootstrap.min.css}"
+          href="../../css/bootstrap.min.css"/>
     <title>My splendid App</title>
 </head>
 <body>
-<h1>New account</h1>
-<form action="/accounts" method="post">
-    <input name="username" type="text" />
-    <button type="submit">Create</button>
-</form>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <h1>New account</h1>
+
+            <form action="/accounts" method="post">
+                <div class="form-group">
+                    <label for="newAccountUsername">Username</label>
+                    <input id="newAccountUsername" class="form-control" name="username" type="text" placeholder="Enter username"/>
+                </div>
+                <button class="btn btn-default" type="submit">Create</button>
+            </form>
+        </div>
+    </div>
+</div>
 </body>
 </html>
