Expunge references to "user"

--- a/src/main/resources/templates/accounts/new.html
+++ b/src/main/resources/templates/accounts/new.html
@@ -15,8 +15,8 @@
 
             <form action="/accounts" method="post">
                 <div class="form-group">
-                    <label for="newAccountUsername">Username</label>
-                    <input id="newAccountUsername" class="form-control" name="username" type="text" placeholder="Enter username"/>
+                    <label for="newAccountName">Name</label>
+                    <input id="newAccountName" class="form-control" name="name" type="text" placeholder="Enter name"/>
                 </div>
                 <button class="btn btn-default" type="submit">Create</button>
             </form>
