--- a/src/main/resources/templates/accounts/show.html
+++ b/src/main/resources/templates/accounts/show.html
@@ -13,8 +13,8 @@
         <div class="col-md-6 col-md-offset-3">
             <h1>Account</h1>
             <dl>
-                <dt>Username</dt>
-                <dd th:text="${account.username}"></dd>
+                <dt>Name</dt>
+                <dd th:text="${account.name}"></dd>
                 <dt>Balance</dt>
                 <dd th:text="${account.balance}"></dd>
             </dl>
