Use webjars for bootstrap, and push jQuery to v2

--- a/src/main/resources/templates/accounts/new.html
+++ b/src/main/resources/templates/accounts/new.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <link rel="stylesheet"
-          th:href="@{/css/bootstrap.min.css}"
-          href="../../css/bootstrap.min.css"/>
     <title>My splendid App</title>
+    <script src="/webjars/jquery/2.1.3/jquery.min.js"></script>
+    <link rel="stylesheet" href="/webjars/bootstrap/3.3.4/css/bootstrap.min.css"/>
 </head>
 <body>
 <div class="container-fluid">
