--- a/src/main/resources/templates/accounts/new.html
+++ b/src/main/resources/templates/accounts/new.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" layout:decorator="layouts/layout">
 <head>
-    <meta charset="UTF-8"/>
-    <title>My splendid App</title>
-    <script src="/webjars/jquery/2.1.3/jquery.min.js"></script>
-    <link rel="stylesheet" href="/webjars/bootstrap/3.3.4/css/bootstrap.min.css"/>
 </head>
 <body>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-            <h1>New account</h1>
+<div layout:fragment="content">
+  <div class="row">
+    <h2>New account</h2>
 
-            <form action="/accounts" method="post">
-                <div class="form-group">
-                    <label for="newAccountName">Name</label>
-                    <input id="newAccountName" class="form-control" name="name" type="text" placeholder="Enter name"/>
-                </div>
-                <button class="btn btn-default" type="submit">Create</button>
-            </form>
-        </div>
-    </div>
+    <form action="/accounts" method="post">
+      <div class="form-group">
+        <label for="newAccountName">Name</label>
+        <input id="newAccountName" class="form-control" name="name" type="text" placeholder="Enter name"/>
+      </div>
+      <button class="btn btn-primary" type="submit">Create</button>
+    </form>
+  </div>
 </div>
 </body>
 </html>
