--- a/src/main/resources/templates/accounts/show.html
+++ b/src/main/resources/templates/accounts/show.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" layout:decorator="layouts/layout">
 <head>
-    <meta charset="UTF-8"/>
-    <title>My splendid App</title>
-    <script src="webjars/jquery/2.1.3/jquery.min.js"></script>
-    <link rel="stylesheet" href="webjars/bootstap/3.3.4/css/bootstrap.min.css"/>
 </head>
 <body>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-            <h1>Account</h1>
-            <dl>
-                <dt>Name</dt>
-                <dd th:text="${account.name}"></dd>
-                <dt>Balance</dt>
-                <dd th:text="${account.balance}"></dd>
-            </dl>
-        </div>
+<div layout:fragment="content">
+  <div class="row">
+    <div class="well">
+      <h2>Account</h2>
+      <dl class="dl-horizontal">
+        <dt>Name</dt>
+        <dd th:text="${account.name}"></dd>
+        <dt>Balance</dt>
+        <dd th:text="${account.balance}"></dd>
+      </dl>
     </div>
+  </div>
 </div>
 </body>
 </html>
