--- a/src/main/resources/templates/accounts/show.html
+++ b/src/main/resources/templates/accounts/show.html
@@ -13,6 +13,15 @@
         <dt>Balance</dt>
         <dd th:text="${account.balance}"></dd>
       </dl>
+      <dl class="dl-horizontal">
+        <form th:action="@{/accounts/{name}/deposit(name=${account.name})}" method="post">
+          <div class="form-group">
+            <label for="depositAmount">Deposit Amount</label>
+            <input  class="form-control" name="amount" id="depositAmount" type="text" placeholder="100.00"/>
+          </div>
+          <button class="btn btn-primary" type="submit">Deposit</button>
+        </form>
+      </dl>
     </div>
   </div>
 </div>
