--- a/src/main/resources/templates/accounts/show.html
+++ b/src/main/resources/templates/accounts/show.html
@@ -22,6 +22,16 @@
           <button class="btn btn-primary" type="submit">Deposit</button>
         </form>
       </dl>
+      <dl class="dl-horizontal">
+        <form th:action="@{/accounts/{name}/withdraw(name=${account.name})}" method="post">
+          <div class="form-group">
+            <label for="withdrawAmount">Withdraw Amount</label>
+            <input  class="form-control" name="amount" id="withdrawAmount" type="text" placeholder="100.00"/>
+          </div>
+          <button class="btn btn-primary" type="submit">Withdraw</button>
+        </form>
+      </dl>
+
     </div>
   </div>
 </div>
