Refactor transfers controller

--- a/src/main/resources/templates/transfers/new.html
+++ b/src/main/resources/templates/transfers/new.html
@@ -11,7 +11,7 @@
 
         <form action="/transfers/create" method="post">
             <div class="row">
-                <dd id="error" th:text = "${accounts.errorMessage}"> </dd>
+                <dd id="error" th:text = "${errorMessage}"> </dd>
             </div>
             <div class="form-group">
                 <label for="fromAccountName">From Account Name:</label>
